Update 1.0.0-beta02 | Fixes #21
* Add ripple effect to RecyclerView items.
* Fix IndexOutOfBoundsException onBackPress with a failed connection in FilesActivity by checking if directories list is empty.
* Update dependencies, version code & number

Signed-off-by: chankruze <chankruze@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,8 @@ task clean(type: Delete) {
 }
 
 ext {
-    roomVersion = '2.2.0'
-    archLifecycleVersion = '2.2.0-beta01'
+    roomVersion = '2.2.1'
+    archLifecycleVersion = '2.2.0-rc01'
     coreTestingVersion = '2.1.0'
-    materialVersion = '1.1.0-beta01'
-    recyclerview_version = '1.0.0'
+    materialVersion = '1.2.0-alpha01'
 }
