--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "in.geekofia.ftpfm"
         minSdkVersion 22
         targetSdkVersion 29
-        versionCode 46
-        versionName "2.0.0-rc1"
+        versionCode 48
+        versionName "2.0.0-rc2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -23,6 +23,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
     // Room components
     implementation "androidx.room:room-runtime:$rootProject.roomVersion"
