--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service android:name=".services.RemoteFileDownloadService"/>
+        <service android:name=".services.RemoteFileUploadService"/>
     </application>
 
 </manifest>
