Use Service instead of IntentService | Fixes #30
* App is becoming laggy when download files is large
* Implements local broadcast for progress update
* Add ripple effect to profile & menu cards
* Update colors

Signed-off-by: chankruze <chankruze@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,10 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".services.RemoteFileDownloadService"/>
-        <service android:name=".services.RemoteFileUploadService"/>
+        <service
+            android:name=".services.DownloadService"
+            android:exported="false" />
+        <service android:name=".services.RemoteFileUploadService" />
     </application>
 
 </manifest>
