--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,12 @@
         <service
             android:name=".services.DownloadService"
             android:exported="false" />
-        <service android:name=".services.RemoteFileUploadService" />
+        <service
+            android:name=".services.RemoteFileDownloadService"
+            android:exported="false" />
+        <service
+            android:name=".services.RemoteFileUploadService"
+            android:exported="false" />
     </application>
 
 </manifest>
