Use ThreadPoolExecutor in Service to Download & Upload
* Upload & download are now callable
* Callable is passed to ThreadPoolExecutor queue
* Shows only transfer started & finished notification to reduce CPU usage
* Remove transfer sheet to show progress for now
* Remove Intent Services and Progress Receiver
* Update navbar color

Issues:
* When system uses light theme, text are invisible, edit text, actionbar, file action icons, in fact whole app ui color is fucked

To Do:
* Add support for material Day/Light theme

Signed-off-by: chankruze <chankruze@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,14 +23,10 @@
         </activity>
 
         <service
-            android:name=".services.DownloadService"
-            android:exported="false" />
+            android:name=".services.DownloadService" />
+
         <service
-            android:name=".services.RemoteFileDownloadService"
-            android:exported="false" />
-        <service
-            android:name=".services.RemoteFileUploadService"
-            android:exported="false" />
+            android:name=".services.UploadService" />
     </application>
 
 </manifest>
