--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "in.geekofia.ftpfm"
         minSdkVersion 22
         targetSdkVersion 29
-        versionCode 55
-        versionName "3.3.4-rc3"
+        versionCode 56
+        versionName "3.3.5"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
