--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.2'
+        classpath 'com.android.tools.build:gradle:3.6.3'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -27,8 +27,8 @@ task clean(type: Delete) {
 }
 
 ext {
-    roomVersion = '2.2.2'
-    archLifecycleVersion = '2.2.0-rc03'
+    roomVersion = '2.2.5'
+    archLifecycleVersion = '2.2.0'
     coreTestingVersion = '2.1.0'
-    materialVersion = '1.2.0-alpha02'
+    materialVersion = '1.2.0-alpha06'
 }
